--- a/studentwater2/about.html
+++ b/studentwater2/about.html
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-    <header id="video-wallpaper">
+    <header id="video-wallpaper" class="visible-sm visible-md visible-lg">
         <div class="containter">
             <div class="row">
                 <div class="visible-sm visible-md visible-lg center text-primary">MAKING A GLOBAL DIFFERENCE</div>
@@ -73,7 +73,7 @@
                             <a href="team.html">TEAM</a>
                         </li>
                         <li>
-                            <a href="contact.html">NEWS</a>
+                            <a href="news.html">NEWS</a>
                         </li>
 
                         <li class="dropdown">
@@ -143,8 +143,13 @@
     <div class="container">
         <!-- Page Heading -->
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 visible-lg visible-md visible-sm">
                 <h1 style="color:#0E8BF6" class="page-header titlefont">
+                    PARTNERS
+                </h1>
+            </div>
+            <div class="col-xs-12 visible-xs">
+                <h1 style="color:#0E8BF6" class="smallTitleFont">
                     PARTNERS
                 </h1>
             </div>
@@ -275,7 +280,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title text-center" style="font-weight:bold">BODMAN PLC: ATTORNEY BRANDON DALZIEL</h4>
+                    <h4 class="modal-title text-center" style="font-weight:bold">BODMAN PLC: Attorney Brandon Dalziel</h4>
                 </div>
                 <div class="modal-body">
                     <img class="center-block" src="img/partners/bodman.png" alt="Attorney Brandon Dalziel">
@@ -291,6 +296,7 @@
             </div>
         </div>
     </div>
+
     <div id="gbModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
 
@@ -298,10 +304,13 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Modal Header</h4>
+                    <h4 class="modal-title text-center" style="font-weight:bold">Global Brigades</h4>
                 </div>
                 <div class="modal-body">
-                    <p>Some text in the modal.</p>
+                    <img class="center-block" src="img/partners/gb.png" alt="Global Brigades">
+                    <p>Global Brigades is an organization that empowers volunteers to facilitate sustainable solutions in under resourced communities while fostering local cultures. The Water Brigades division of the Global Brigades allows students from universities all over the country to travel to Honduras and help assist in designing and implementing water systems to prevent water related illnesses in communities with limited access to clean water. The villages are isolated with citizens who do not readily have access to sanitized water and as a result, attain water only every three days. With the help of the students who take this week long trip, which are offered year round, the homes of these communities directly connect to potable water through water pipes.</p>
+                    <br />
+                    <p>The National Student Water Association's (NSWA) goal is to take part in an annual trip to Honduras during Spring Break as an Alternative Spring Break option for students in college. This trip has already helped many Hondurans and humbled many students in the experience of the trip. It is protected with military personal that guard the area 24 hours a day, seven days a week. Three meals are offered daily and transportation to and from the lodging area is provided. With this annual trip. The NSWA plans on beginning its journey of making a difference in the world. Honduras is the current focus of Water Brigades, where more than 700 annual student volunteers and professionals travel to implement clean water systems in under resourced communities. Communities are selected on an extensive study based on need, access to clean water and include a collection of information to create baseline demographic information.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -309,6 +318,7 @@
             </div>
         </div>
     </div>
+
     <div id="fhsModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
 
@@ -316,10 +326,11 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Modal Header</h4>
+                    <h4 class="modal-title text-center" style="font-weight:bold">Fordson High School Chapter</h4>
                 </div>
                 <div class="modal-body">
-                    <p>Some text in the modal.</p>
+                    <img class="center-block" src="img/partners/fhs.png" alt="Fordson High School">
+                    <p>As many members are Fordson High School graduates, the group educates future generations about the crisis. Founded by president Salim Makki and Vice President Maher Hussein, the group intends to build a well on behalf of Fordson High School. The National Student Water Association aims to aid the group in any way possible.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
