--- a/studentwater2/contact.html
+++ b/studentwater2/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -119,9 +119,10 @@
 
     <!-- Page Content -->
     <div class="container">
+        <div class="row" style="height:5em"></div>
 
         <!-- Page Heading/Breadcrumbs -->
-        <div class="row">
+        <!--<div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Contact
                     <small>Subheading</small>
@@ -132,7 +133,7 @@
                     <li class="active">Contact</li>
                 </ol>
             </div>
-        </div>
+        </div>-->
         <!-- /.row -->
 
         <!-- Content Row -->
@@ -144,18 +145,18 @@
             </div>
             <!-- Contact Details Column -->
             <div class="col-md-4">
-                <h3>Contact Details</h3>
+                <!--<h3>Contact Details</h3>-->
                 <p>
-                    3481 Melrose Place<br>Beverly Hills, CA 90210<br>
+                    440 Burroughs St.<br>Detroit, MI 48202<br>
                 </p>
                 <p><i class="fa fa-phone"></i> 
-                    <abbr title="Phone">P</abbr>: (123) 456-7890</p>
+                    <abbr title="Phone">P</abbr>: (313) 903-0586</p>
                 <p><i class="fa fa-envelope-o"></i> 
-                    <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
+                    <abbr title="Email">E</abbr>: <a href="mailto:info@studentwater.org">info@studentwater.org</a>
                 </p>
                 <p><i class="fa fa-clock-o"></i> 
-                    <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM</p>
-                <ul class="list-unstyled list-inline list-social-icons">
+                    <abbr title="Hours">H</abbr>: Monday - Friday: 9 AM - 5 PM</p>
+                <!--<ul class="list-unstyled list-inline list-social-icons">
                     <li>
                         <a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
                     </li>
@@ -168,7 +169,7 @@
                     <li>
                         <a href="#"><i class="fa fa-google-plus-square fa-2x"></i></a>
                     </li>
-                </ul>
+                </ul>-->
             </div>
         </div>
         <!-- /.row -->
@@ -226,6 +227,19 @@
 
     </div>
     <!-- /.container -->
+
+
+
+    <div id="newGoogleMaps"></div>
+
+    <div id="map"></div>
+
+    <script>
+  function initMap() {}
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js"
+            async defer></script>
+
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
