--- a/studentwater2/index.html
+++ b/studentwater2/index.html
@@ -62,7 +62,7 @@
                         <a href="team.html">TEAM</a>
                     </li>
                     <li>
-                        <a href="contact.html">NEWS</a>
+                        <a href="news.html">NEWS</a>
                     </li>
 
                     <li class="dropdown">
@@ -127,36 +127,66 @@
     </nav>
 
     <!-- Main Image-->
-    <div class="header">
+    <!--<div class="header">
         <div class="container">
+            <div class="row" style="height:5em"></div>
             <div style="background-color:transparent" class="jumbotron">
                 <h1 style="font-weight: bold; font-size: 4rem;">SUPPORT OUR COALITION</h1>
                 <h3> The NSWA is a coalition of students working together to solve the water crisis. Help us change the lives of 200 people!</h3>
             </div>
-            <div class="container-fluid">
+            <div class="container">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-2 col-md-offset-6">
                         <a role="button" class="btn btn-primary" href="https://donate.water.org/?a=A00000&utm_campaign=button_hero&c=Stripe&utm_medium=web&utm_content=%2F&utm_source=water_org">DONATE</a>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-2 col-md-pull-5">
                         <a role="button" class="btn btn-primary" href="http://www.studentwater.org/Contact">GET INVOLVED</a>
+                    </div>
+                    <div class="row" style="height:7em"></div>
+                </div>
+            </div>
+        </div>
+    </div>-->
+
+
+    <div class="header">
+        <div class="container">
+            <div class="row" style="height:5em"></div>
+            <div class="row class="col-md-6 col-md-push-10"">
+                <h1 style="font-weight: bold; font-size: 4rem;">SUPPORT OUR COALITION</h1>
+            </div>
+            <div class="row">
+                <div class="col-md-9 col-md-offset-3">
+                    <h3> The NSWA is a coalition of students working together to solve the water crisis. Help us change the lives of 200 people!</h3>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-2 col-md-offset-6">
+                            <a role="button" class="btn btn-primary" href="https://donate.water.org/?a=A00000&utm_campaign=button_hero&c=Stripe&utm_medium=web&utm_content=%2F&utm_source=water_org">DONATE</a>
+                        </div>
+                        <div class="col-md-2 col-md-pull-5">
+                            <a role="button" class="btn btn-primary" href="http://www.studentwater.org/Contact">GET INVOLVED</a>
+                        </div>
+                        <div class="row" style="height:7em"></div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-
-    <!-- Icons Section -->
 
 
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header titlefont">
-                    WATER CHANGES EVERYTHING
-                </h1>
+
+        <!-- Icons Section -->
+
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header titlefont">
+                        WATER CHANGES EVERYTHING
+                    </h1>
+                </div>
             </div>
-        </div>
 
             <div class="row">
 
