--- a/studentwater2/portfolio-4-col.html
+++ b/studentwater2/portfolio-4-col.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -136,23 +136,38 @@
         <!-- /.row -->
 
         <!-- Projects Row -->
-        <div class="row">
-            <div class="col-md-3 img-portfolio">
+        <div class="row list-group">
+            <div class="col-md-2 thumbnail">
+                <a href="http://www.linkedin.com/pub/oyin-akindele/4a/44b/148">
+                    <img class="img-responsive img-circle img-hover" src="http://studentwater.org/assets/UchechiIteogu-334d37107de53404ca22d11c5c2b4147.png" alt="">
+                </a>
+                <i class="fade fa-linkedin"></i>
+                <div class="caption">
+                    <h4>Thumbnail Labil</h4>
+                    <p>>Some other stuff</p>
+                </div>
+            </div>
+            <div class="col-md-2 img-portfolio">
                 <a href="portfolio-item.html">
                     <img class="img-responsive img-hover" src="http://placehold.it/750x450" alt="">
                 </a>
             </div>
-            <div class="col-md-3 img-portfolio">
+            <div class="col-md-2 img-portfolio">
                 <a href="portfolio-item.html">
                     <img class="img-responsive img-hover" src="http://placehold.it/750x450" alt="">
                 </a>
             </div>
-            <div class="col-md-3 img-portfolio">
+            <div class="col-md-2 img-portfolio">
                 <a href="portfolio-item.html">
                     <img class="img-responsive img-hover" src="http://placehold.it/750x450" alt="">
                 </a>
             </div>
-            <div class="col-md-3 img-portfolio">
+            <div class="col-md-2 img-portfolio">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive img-hover" src="http://placehold.it/750x450" alt="">
+                </a>
+            </div>
+            <div class="col-md-2 img-portfolio">
                 <a href="portfolio-item.html">
                     <img class="img-responsive img-hover" src="http://placehold.it/750x450" alt="">
                 </a>
