Minor updates to chapters page and contact

--- a/studentwater2/portfolio-4-col.html
+++ b/studentwater2/portfolio-4-col.html
@@ -137,21 +137,41 @@
 
         <!-- Projects Row -->
         <div class="row list-group">
-            <div class="col-md-2 thumbnail">
+            <div class="col-sm-4 col-md-2 thumbnail">
+                <a href="http://www.linkedin.com/pub/oyin-akindele/4a/44b/148">
+                    <img class="img-responsive img-circle img-hover" style="height: 100%; width: 85%"; src="http://studentwater.org/assets/UchechiIteogu-334d37107de53404ca22d11c5c2b4147.png" alt="">
+                </a>
+                <i class="fade fa-linkedin"></i>
+                <div class="caption">
+                    <h4>Oyin Akindele</h4>
+                    <p>>Baruch College</p>
+                </div>
+            </div>
+            <div class="col-sm-4  col-md-2 thumbnail">
                 <a href="http://www.linkedin.com/pub/oyin-akindele/4a/44b/148">
                     <img class="img-responsive img-circle img-hover" src="http://studentwater.org/assets/UchechiIteogu-334d37107de53404ca22d11c5c2b4147.png" alt="">
                 </a>
                 <i class="fade fa-linkedin"></i>
                 <div class="caption">
-                    <h4>Thumbnail Labil</h4>
-                    <p>>Some other stuff</p>
+                    <h4>Oyin Akindele</h4>
+                    <p>>Baruch College</p>
                 </div>
             </div>
-            <div class="col-md-2 img-portfolio">
+                        <div class="col-sm-4  col-md-2 thumbnail">
+                <a href="http://www.linkedin.com/pub/oyin-akindele/4a/44b/148">
+                    <img class="img-responsive img-circle img-hover" src="http://studentwater.org/assets/UchechiIteogu-334d37107de53404ca22d11c5c2b4147.png" alt="">
+                </a>
+                <i class="fade fa-linkedin"></i>
+                <div class="caption">
+                    <h4>Oyin Akindele</h4>
+                    <p>>Baruch College</p>
+                </div>
+            </div>
+            <!--<div class="col-sm-4 col-md-2 img-portfolio">
                 <a href="portfolio-item.html">
                     <img class="img-responsive img-hover" src="http://placehold.it/750x450" alt="">
                 </a>
-            </div>
+            </div>-->
             <div class="col-md-2 img-portfolio">
                 <a href="portfolio-item.html">
                     <img class="img-responsive img-hover" src="http://placehold.it/750x450" alt="">
